==> wanshouxujiu/PD-PowerSource-V2/c8t6_KeTiaoDianYuan_2.2.1.4/Uesr/OLED/bsp_OLED.c <==
#include "stm32f10x.h"
#include "OLED_Font.h"
#include "bsp_OLED.h"
#include "bsp_usart.h"
#include "delay.h"

uint8_t OLED_WriteCommand(uint8_t Command)
{
	//产生起始信号
	I2C_GenerateSTART(OLED_I2C, ENABLE);

	/* 检测EV5事件并清除标志位 */
	I2CTimeout = I2CT_FLAG_TIMEOUT;  
	while(!I2C_CheckEvent(OLED_I2C, I2C_EVENT_MASTER_MODE_SELECT))  
	{
	if((I2CTimeout--) == 0) return I2C_TimeoutEvent(5);
	}

	I2C_Send7bitAddress(OLED_I2C, OLED_ADDR, I2C_Direction_Transmitter);

	/* 检测EV6事件并清除标志位 */
	I2CTimeout = I2CT_FLAG_TIMEOUT;  
	while(!I2C_CheckEvent(OLED_I2C, I2C_EVENT_MASTER_TRANSMITTER_MODE_SELECTED))  
	{
	if((I2CTimeout--) == 0) return I2C_TimeoutEvent(6);
	}

	I2C_SendData(OLED_I2C, 0x00);   //写命令

	/* 检测EV8事件并清除标志位 */
	I2CTimeout = I2CT_FLAG_TIMEOUT;  
	while(!I2C_CheckEvent(OLED_I2C, I2C_EVENT_MASTER_BYTE_TRANSMITTING))  
	{
	if((I2CTimeout--) == 0) return I2C_TimeoutEvent(8);
	}

	I2C_SendData(OLED_I2C, Command);

	/* 检测EV8_2事件并清除标志位 */
	I2CTimeout = I2CT_FLAG_TIMEOUT;  
	while(!I2C_CheckEvent(OLED_I2C, I2C_EVENT_MASTER_BYTE_TRANSMITTED))  
	{
	if((I2CTimeout--) == 0) return I2C_TimeoutEvent(82);
	}

	I2C_GenerateSTOP(OLED_I2C, ENABLE);
	Delay_us(5);  //快速模式下，不等待容易出错

	return 1;
}

uint8_t OLED_WriteData(uint8_t Data)
{
	//产生起始信号
	I2C_GenerateSTART(OLED_I2C, ENABLE);

	/* 检测EV5事件并清除标志位 */
	I2CTimeout = I2CT_FLAG_TIMEOUT;  
	while(!I2C_CheckEvent(OLED_I2C, I2C_EVENT_MASTER_MODE_SELECT))  
	{
	if((I2CTimeout--) == 0) return I2C_TimeoutEvent(5);
	}

	I2C_Send7bitAddress(OLED_I2C, OLED_ADDR, I2C_Direction_Transmitter);

	/* 检测EV6事件并清除标志位 */
	I2CTimeout = I2CT_FLAG_TIMEOUT;  
	while(!I2C_CheckEvent(OLED_I2C, I2C_EVENT_MASTER_TRANSMITTER_MODE_SELECTED))  
	{
	if((I2CTimeout--) == 0) return I2C_TimeoutEvent(6);
	}

	I2C_SendData(OLED_I2C, 0x40);   //写命令

	/* 检测EV8事件并清除标志位 */
	I2CTimeout = I2CT_FLAG_TIMEOUT;  
	while(!I2C_CheckEvent(OLED_I2C, I2C_EVENT_MASTER_BYTE_TRANSMITTING))  
	{
	if((I2CTimeout--) == 0) return I2C_TimeoutEvent(8);
	}
	
	I2C_SendData(OLED_I2C, Data);

	/* 检测EV8_2事件并清除标志位 */
	I2CTimeout = I2CT_FLAG_TIMEOUT;  
	while(!I2C_CheckEvent(OLED_I2C, I2C_EVENT_MASTER_BYTE_TRANSMITTED))  
	{
	if((I2CTimeout--) == 0) return I2C_TimeoutEvent(82);
	}
	
	I2C_GenerateSTOP(OLED_I2C, ENABLE);
	Delay_us(5);  //快速模式下，不等待容易出错

	return 1;
}

void OLED_Init(void)
{
	uint16_t i, j, z;
	uint8_t OledInitFlag = 1;

	for (z = 0; z < 5; z++)
	{
		// printf("初始化次数计数: %d\r\n", z);
		for (i = 0; i < 1000; i++)			//上电延时
		{
			for (j = 0; j < 1000; j++);
		}
		
		OLED_I2C_Init();			//端口初始化
		
		if(OLED_WriteCommand(0xAE) == 0) OledInitFlag = 0;	//关闭显示
		
		if(OLED_WriteCommand(0xD5) == 0) OledInitFlag = 0;	//设置显示时钟分频比/振荡器频率
		if(OLED_WriteCommand(0x80) == 0) OledInitFlag = 0;
		
		if(OLED_WriteCommand(0xA8) == 0) OledInitFlag = 0;	//设置多路复用率
		if(OLED_WriteCommand(0x3F) == 0) OledInitFlag = 0;
		
		if(OLED_WriteCommand(0xD3) == 0) OledInitFlag = 0;	//设置显示偏移
		if(OLED_WriteCommand(0x00) == 0) OledInitFlag = 0;
		
		if(OLED_WriteCommand(0x40) == 0) OledInitFlag = 0;	//设置显示开始行
		
		#if SHOW_INVERSION
		if(OLED_WriteCommand(0xA0) == 0) OledInitFlag = 0;	//设置左右方向，0xA1正常 0xA0左右反置
		if(OLED_WriteCommand(0xC0) == 0) OledInitFlag = 0;	//设置上下方向，0xC8正常 0xC0上下反置
		#else
		if(OLED_WriteCommand(0xA1) == 0) OledInitFlag = 0;
		if(OLED_WriteCommand(0xC8) == 0) OledInitFlag = 0;
		#endif

		if(OLED_WriteCommand(0xDA) == 0) OledInitFlag = 0;	//设置COM引脚硬件配置
		if(OLED_WriteCommand(0x12) == 0) OledInitFlag = 0;  //0.96(128*64)寸这里为0x12，0.91(128*32)寸这里为0x02
		
		if(OLED_WriteCommand(0x81) == 0) OledInitFlag = 0;	//设置对比度控制
		if(OLED_WriteCommand(0xCF) == 0) OledInitFlag = 0;

		if(OLED_WriteCommand(0xD9) == 0) OledInitFlag = 0;	//设置预充电周期
		if(OLED_WriteCommand(0xF1) == 0) OledInitFlag = 0;

		if(OLED_WriteCommand(0xDB) == 0) OledInitFlag = 0;	//设置VCOMH取消选择级别
		if(OLED_WriteCommand(0x30) == 0) OledInitFlag = 0;

		if(OLED_WriteCommand(0xA4) == 0) OledInitFlag = 0;	//设置整个显示打开/关闭

		if(OLED_WriteCommand(0xA6) == 0) OledInitFlag = 0;	//设置正常/倒转显示

		if(OLED_WriteCommand(0x8D) == 0) OledInitFlag = 0;	//设置充电泵
		if(OLED_WriteCommand(0x14) == 0) OledInitFlag = 0;

		if(OLED_WriteCommand(0xAF) == 0) OledInitFlag = 0;	//开启显示
			
		OLED_Clear();				//OLED清屏

		if(OledInitFlag)
		{
			break;
		}
	}
}
